--- a/package.json
+++ b/package.json
@@ -31,6 +31,25 @@
     ]
   },
   "devDependencies": {
-    "redux-devtools": "^3.5.0"
+    "@babel/core": "7.4.4",
+    "@babel/runtime": "7.4.4",
+    "babel-eslint": "10.0.2",
+    "redux-devtools": "^3.5.0",
+    "babel-jest": "24.8.0",
+    "eslint": "6.1.0",
+    "eslint-config-prettier": "4.2.0",
+    "eslint-plugin-prettier": "3.0.1",
+    "eslint-plugin-react": "7.14.2",
+    "eslint-plugin-react-native": "3.7.0",
+    "eslint-watch": "5.1.2",
+    "genstruct": "1.0.5",
+    "husky": ">=1",
+    "jest": "24.8.0",
+    "lint-staged": ">=8",
+    "metro-react-native-babel-preset": "0.54.0",
+    "prettier": "1.17.0",
+    "react-test-renderer": "16.8.3",
+    "reactotron-react-native": "^3.6.5",
+    "sonar-scanner": "3.1.0"
   }
 }
